force-app/main/default/objects/cs_Apex_Settings__c/cs_Apex_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls apex behavior globally or by user/profile</description>
    <label>Apex Settings</label>
</CustomObject>