force-app/main/default/objects/cs_Apex_Settings__c/fields/Bypass_All_Flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WARNING: this does just what it says it does. Proceed with caution!</description>
    <inlineHelpText>WARNING: this does just what it says it does. Proceed with caution!</inlineHelpText>
    <label>Bypass All Flows</label>
    <type>Checkbox</type>
</CustomField>