force-app/main/default/objects/cs_Apex_Settings__c/fields/Bypass_All_Validations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WARNING: this does what it says it does (for most validation rules, not all). Proceed with caution!</description>
    <inlineHelpText>WARNING: this does what it says it does (for most validation rules, not all). Proceed with caution!</inlineHelpText>
    <label>Bypass All Validations</label>
    <type>Checkbox</type>
</CustomField>