force-app/main/default/objects/cs_Apex_Settings__c/fields/Bypass_Triggers_By_Object_3__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Triggers_By_Object_3__c</fullName>
    <description>A comma-delimited list of objects for which triggers will be bypassed. Use the name that would come from describe, don&apos;t misspell it!  (ex: Opportunity,Apttus_Proposal__Proposal__c)</description>
    <label>Bypass Triggers By Object 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>