force-app/main/default/objects/cs_Apex_Settings__c/fields/ILMN_Logs_to_Persist__c.field-meta.xml
<CustomField>
    <fullName>ILMN_Logs_to_Persist__c</fullName>
    <description>Enter the delimited log names to persist for this user (e.g. Opportunities,TAPS Deferred Run)</description>
    <inlineHelpText>Enter the delimited log names to persist for this user (e.g. Opportunities,TAPS Deferred Run)</inlineHelpText>
    <label>ILMN Logs to Persist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>