force-app/main/default/objects/cs_Apex_Settings__c/fields/Modify_Users__c.field-meta.xml
<CustomField>
    <fullName>Modify_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to bypass Modify User validation rule. If checked, grants access to modify users (purpose is to limit access to user modification for users with Delegated Admin Rights)</description>
    <inlineHelpText>If checked, grants access to modify users (used to limit access to user modification for users with Delegated Admin Rights).</inlineHelpText>
    <label>Modify Users</label>
    <type>Checkbox</type>
</CustomField>